# life

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compileWithPass.sh  genIR
FrontEnd/: app.lang  build.sh  lang.lex  lang.y
FrontEnd/examples/: 2_let_array.lang  3_math.lang  4_if.lang  5_loop.lang
IR/: app.ll  app_gen.ll  app_lang.ll  app_with_trace.ll
IRGen/: CMakeLists.txt  main.cpp
ISA/: CMakeLists.txt  app.s  isa.txt  main.cpp
ISA/include/: ISA.h  cpu.h  instr.h
ISA/src/: CMakeLists.txt  bin.cpp  cpu.cpp  extIR.cpp  fullIR.cpp  instr.cpp
RunIR/: CMakeLists.txt  main.cpp
include/: sim.h
pass/: CMakeLists.txt  Pass.cpp  log.c
src/: CMakeLists.txt  app.c  start.c
src/sim/: CMakeLists.txt  sim.c
statistics/: stat_inst_uses.py  stat_inst_uses.txt
